Make sure blockquotes are legible in Simon theme.

--- a/css/themes/simon.less
+++ b/css/themes/simon.less
@@ -208,5 +208,7 @@ body {
         font-size: 24pt;
         line-height: 32pt;
         text-shadow: none;
+        background: white;
+        color: black;
     }
 }
